# xuxiaowei-cloud

./: .codechina-ci.yml  .env.dev  .gitignore  .gitlab-ci.yml  .springjavaformatconfig  README-OLD.md  README-dependencies.md  README.md  bos.sh  cos.sh  docker.yml  k8s-modules.yml  k8s.yml  mvnw  obs.sh  oss.sh  package.json  pom.xml  service.yml  set-version.sh  settings-jihulab.xml  settings-private.xml  settings.xml  shell-service.yml  shell.yml  sync.yml  upload.yml
.github/: dependabot.yml
.gitlab/: dependabot.yml
.run/: AdminServerApplication.run.xml  CanalApplication.run.xml  FileApplication.run.xml  GatewayApplication.run.xml  GenerateApplication.run.xml  MasterDataApplication.run.xml  PassportApplication.run.xml  UserApplication.run.xml  WeChatMiniProgramApplication.run.xml  WeChatOffiaccountApplication.run.xml  WebServiceApplication.run.xml  WebSocketApplication.run.xml  XxlJobAdminApplication.run.xml  passport build.run.xml  passport dev.run.xml  passport lint.run.xml  passport-ui build.run.xml  passport-ui dev.run.xml  passport-ui lint.run.xml  passport-ui pre.run.xml  ui build.run.xml  ui dev.run.xml  ui lint.run.xml  ui pre.run.xml
.workflow/: .gitee-ci.yml
admin-server/: Dockerfile  admin-server-deployment.yaml  admin-server-pv-local.yaml  admin-server-pv-nfs.yaml  admin-server.yaml  pom.xml
authorization-server/: README.md  pom.xml
authorization-server-ui/: README.md  package.json  pom.xml  vite.config.js
canal/: pom.xml
cloud-commons-parent/: pom.xml
sh/: Canal.md  (+10 more)
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/src/: main.rs
(+1324 files in other folders)
