[package]
name = "xuxiaowei-cloud"
version = "0.0.1"
description = "徐晓伟微服务"
authors = ["徐晓伟 <xuxiaowei@xuxiaowei.com.cn>"]
license = "Apache-2.0"
repository = "git+https://github.com/xuxiaowei-cloud/xuxiaowei-cloud.git"
default-run = "xuxiaowei-cloud"
edition = "2021"
rust-version = "1.59"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
